--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/sertifikatkarate.jpg" height="50" width="60" class="img-res" alt="">
+                            <img src="assets/img/game.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Juara 2 Karate Kabupaten</h4>
+                                <h4>Membuat Game Tetris</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem8"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="assets/img/sertifikatkarate.jpg"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="assets/projek/Tetris-main/tetris.html"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -556,14 +556,14 @@
           <div class="modal-content">
             <div class="modal-header">
               <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-              <img class="img-res" src="assets/img/sertifikatkarate.jpg" alt="">
+              <img class="img-res" src="assets/img/game.jpg" alt="">
             </div>
             <div class="modal-body">
-              <h4 class="modal-title">Juara 2 Lomba Karate Kabupaten Pemalang</h4>
-              <p>Meraih Juara 2 dalam Lomba Karate Kabupaten Pemalang (Bobot 70+ kg), prestasi ini mencerminkan dedikasi, kerja keras, dan ketahanan fisik yang tinggi. Sebagai atlet karate, saya terus berusaha untuk berkembang dan berkompetisi dengan semangat yang tak kenal lelah.</p>
+              <h4 class="modal-title">Membuat Game Tetris</h4>
+              <p>Sebuah game Tetris yang dapat dimainkan dengan grafik sederhana, kontrol responsif, dan mekanisme permainan yang menantang. Anda bisa terus mengembangkan proyek ini dengan menambahkan fitur unik atau grafis yang lebih menarik.</p>
             </div>
             <div class="modal-footer">
-              <a href="assets/img/sertifikatkarate.jpg" class="btn btn-fill">Visit Page</a>
+              <a href="ssets/projek/Tetris-main/tetris.html" class="btn btn-fill">Visit Page</a>
             </div>
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
