--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/sertifikatpkl.jpg" height="50" width="60" class="img-res" alt="">
+                            <img src="assets/img/chart.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Praktek Kerja Lapangan</h4>
+                                <h4>Pembuatan Chart Website</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem9"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="assets/img/pkl.pdf"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="assets/projek/chart/chart.html"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
@@ -574,14 +574,14 @@
           <div class="modal-content">
             <div class="modal-header">
               <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-              <img class="img-res" src="assets/img/sertifikatpkl.jpg" alt="">
+              <img class="img-res" src="assets/img/chart.jpg" alt="">
             </div>
             <div class="modal-body">
-              <h4 class="modal-title">Praktik Kerja Lapangan</h4>
-              <p>Praktik Kerja Lapangan di CV Mind Technology sebagai Asisten Teknisi Jaringan, bertanggung jawab dalam pembuatan topologi jaringan, pemasangan jaringan di gedung, serta konfigurasi proxy dan access point untuk memastikan konektivitas berjalan lancar. Pengalaman ini melatih kemampuan teknis, pemecahan masalah, dan kerjasama tim dalam lingkungan teknologi.</p>
+              <h4 class="modal-title">Pembuatan Chart Website</h4>
+              <p>Membuat chart pada website melibatkan menyiapkan elemen, mengimpor library, menyiapkan data, dan menggambar chart dengan JavaScript.</p>
             </div>
             <div class="modal-footer">
-              <a href="assets/img/pkl.pdf" class="btn btn-fill">Visit Page</a>
+              <a href="assets/projek/chart/chart.html" class="btn btn-fill">Visit Page</a>
             </div>
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
