--- a/assets/projek/chartfix/chartfix.html
+++ b/assets/projek/chartfix/chartfix.html
@@ -166,7 +166,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>Dashboard Penjualan</h1>
+        <h1>Dashboard Penjualan Toko Bagus</h1>
         <nav>
             <a href="#">Beranda</a>
             <a href="#">Laporan</a>
