--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/game.jpg" height="50" width="60" class="img-res" alt="">
+                            <img src="assets/img/game1.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Membuat Game Tetris</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem8"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -556,7 +556,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-              <img class="img-res" src="assets/img/game.jpg" alt="">
+              <img class="img-res" src="assets/img/game1.jpg" alt="">
             </div>
             <div class="modal-body">
               <h4 class="modal-title">Membuat Game Tetris</h4>
