--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <p>Hi! I’m Bagus Taufik Hidayat, an IT enthusiast specializing in network engineering and cybersecurity. I’m passionate about leveraging technology to solve real-world problems and continuously expanding my skills in cloud infrastructure, IT systems, and Networking. Currently pursuing a degree in Informatics Engineering, I’m always eager to take on new challenges and contribute innovative solutions in the tech industry.
                       In my free time, I enjoy playing football and traveling, which help me stay active and embrace new experiences. I’m always looking to learn new things and adapt quickly to new environments, which helps me stay agile in a fast-paced industry.
                     </p>
-                    <a href="assets/img/CVBagus.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                    <a href="assets/img/cvbagus2.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                 </div>
             </div>
         </div>
