--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             frameborder="0"
             style="border:0;"
             allowfullscreen
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.365621415004!2d106.9310894!3d-6.3031455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69ed0572055981%3A0x9cf9807184317006!2sGg.%20Dewa%2C%20Ciracas%2C%20Kec.%20Ciracas%2C%20Kota%20Jakarta%20Timur%2C%20Daerah%20Khusus%20Ibukota%20Jakarta%2013740!5e0!3m2!1sid!2sid!4v1700000000000!5m2!1sid!2sid">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.675708932096!2d109.3792319!3d-6.8912379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e6fdad3248d0561%3A0x22b2c64888d4d0ad!2sJl.%20Kauman%2C%20Kebondalem%2C%20Kec.%20Pemalang%2C%20Kabupaten%20Pemalang%2C%20Jawa%20Tengah%2052312!5e0!3m2!1sen!2sid!4v1234567890123!5m2!1sen!2sid">
         </iframe>
       </div>
 
