--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
                 </div>
                 <div class="row">
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6" data-category="web">
                         <div class="portfolio-item">
                             <img src="assets/img/manajemen3.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
