--- a/index.html
+++ b/index.html
@@ -335,6 +335,34 @@
                 </div>
             </div>
         </section><!-- /.secton-portfolio -->
+<style>
+/* Gaya untuk tombol filter */
+.filters {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.filter-btn {
+    padding: 10px 20px;
+    margin: 5px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.filter-btn:hover {
+    background-color: #0056b3;
+}
+
+/* Gaya untuk menyembunyikan item yang tidak sesuai filter */
+.portfolio-item.hidden {
+    display: none !important;
+}
+</style>
 
       <script>
     document.addEventListener("DOMContentLoaded", function () {
