--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="web">
                         <div class="portfolio-item">
                             <img src="assets/img/login.png"height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -262,7 +262,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="web">
                         <div class="portfolio-item">
                             <img src="assets/img/kalkulator.png" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -272,7 +272,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="certificate">
                         <div class="portfolio-item">
                             <img src="assets/img/sertifikathtml.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -282,7 +282,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="certificate">
                         <div class="portfolio-item">
                             <img src="assets/img/sertifikatcss.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -292,7 +292,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="certificate">
                         <div class="portfolio-item">
                             <img src="assets/img/sertifikatjavascript.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -302,7 +302,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="certificate">
                         <div class="portfolio-item">
                             <img src="assets/img/sertifikatintermediate.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -312,7 +312,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="web">
                         <div class="portfolio-item">
                             <img src="assets/img/game1.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
@@ -322,7 +322,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
+                    <div class="col-md-4 col-xs-6"data-category="web">
                         <div class="portfolio-item">
                             <img src="assets/img/chart3.jpg" height="50" width="60" class="img-res" alt="">
                             <div class="portfolio-item-info">
